@@ -164,7 +164,8 @@ typedef struct _PH_PROCESS_ITEM
             ULONG IsWow64 : 1;
             ULONG IsImmersive : 1;
             ULONG IsWow64Valid : 1;
-            ULONG Spare : 20;
+            ULONG IsPartiallySuspended : 1;
+            ULONG Spare : 19;
         };
     };
 
